# X1Plus

./: .gitignore  .releaserc  LICENSE  Makefile  README.md  docker-build.sh  docker-clean.sh  docker-run.sh  test.py  update-regulatory-db.sh
bbl_screen-patch/: Makefile  (+19 more)
kexec-tools/: .gitignore  AUTHORS  INSTALL  Makefile.in  News  TODO  bootstrap  configure.ac  kexec-tools.spec.in
kexec-tools/.github/workflows/: build.yml
kexec-tools/config/: config.guess  config.sub
kexec-tools/doc/: Makefile  linux-i386-boot.txt  linux-i386-zero-page.txt  mpc85xx.txt  multiboot.html  nbi-spec.txt
kexec-tools/include/: Makefile  elf.h  image.h  kexec-uImage.h  unused.h
kexec-tools/include/boot/: beoboot.h  elf_boot.h
kexec-tools/include/x86/: mb_header.h  mb_info.h  x86-linux.h
kexec-tools/kexec/: .gitignore  Makefile  add_buffer.c  add_segment.c  arch_reuse_initrd.c  crashdump-elf.c  crashdump-xen.c  crashdump.c  crashdump.h  dt-ops.c  dt-ops.h  ezkexec.c  firmware_memmap.c  firmware_memmap.h  fs2dt.c  fs2dt.h  ifdown.c  kexec-elf-boot.c  kexec-elf-boot.h  kexec-elf-core.c  kexec-elf-exec.c  kexec-elf-rel.c  kexec-elf.c  kexec-elf.h  kexec-iomem.c  kexec-lzma.h  kexec-sha256.h  kexec-syscall.h  kexec-uImage.c  kexec-xen.c  kexec-xen.h  kexec-zlib.h  kexec.8  kexec.c  kexec.h  lzma.c  mem_regions.c  mem_regions.h  phys_arch.c  phys_to_virt.c  (+4 more)
kexec-tools/kexec/arch/alpha/: Makefile
kexec-tools/kexec/arch/alpha/include/arch/: options.h
kexec-tools/kexec/arch/arm/: Makefile  crashdump-arm.c  crashdump-arm.h  iomem.h  kexec-arm.c  kexec-arm.h  kexec-elf-rel-arm.c  kexec-uImage-arm.c  kexec-zImage-arm.c  phys_to_virt.c  phys_to_virt.h
kexec-tools/kexec/arch/arm/include/arch/: options.h
kexec-tools/kexec/arch/arm64/: Makefile  crashdump-arm64.c  crashdump-arm64.h  image-header.h  iomem.h  kexec-arm64.c  kexec-arm64.h  kexec-elf-arm64.c  kexec-image-arm64.c  kexec-uImage-arm64.c  kexec-zImage-arm64.c
kexec-tools/kexec/arch/arm64/include/arch/: options.h
kexec-tools/kexec/arch/cris/: Makefile  cris-setup-simple.S  kexec-cris.c  kexec-cris.h  kexec-elf-cris.c  kexec-elf-rel-cris.c
kexec-tools/kexec/arch/cris/include/arch/: options.h
kexec-tools/kexec/arch/hppa/: Makefile  kexec-elf-hppa.c  kexec-elf-rel-hppa.c  kexec-hppa.c  kexec-hppa.h
kexec-tools/kexec/arch/hppa/include/arch/: options.h
kexec-tools/kexec/arch/i386/: Makefile  crashdump-x86.c  crashdump-x86.h  kexec-beoboot-x86.c  kexec-bzImage.c  kexec-elf-rel-x86.c  kexec-elf-x86.c  kexec-mb2-x86.c  kexec-multiboot-x86.c  kexec-nbi.c  kexec-x86-common.c  kexec-x86.c  kexec-x86.h  x86-linux-setup.c  x86-linux-setup.h
kexec-tools/kexec/arch/i386/include/arch/: options.h
kexec-tools/kexec/arch/ia64/: Makefile  crashdump-ia64.c  crashdump-ia64.h  kexec-elf-ia64.c  kexec-elf-rel-ia64.c  kexec-ia64.c  kexec-ia64.h  kexec-iomem.c
kexec-tools/kexec/arch/loongarch/: Makefile  crashdump-loongarch.c  crashdump-loongarch.h  image-header.h  iomem.h  kexec-elf-loongarch.c  kexec-elf-rel-loongarch.c  kexec-loongarch.c  kexec-loongarch.h  kexec-pei-loongarch.c
kexec-tools/kexec/arch/m68k/: Makefile  bootinfo.c  bootinfo.h  kexec-elf-m68k.c  kexec-elf-rel-m68k.c  kexec-m68k.c  kexec-m68k.h
kexec-tools/kexec/arch/mips/: Makefile  crashdump-mips.c  crashdump-mips.h  kexec-elf-mips.c  kexec-elf-rel-mips.c  kexec-mips.c  kexec-mips.h
kexec-tools/kexec/arch/ppc/: Makefile  crashdump-powerpc.c  crashdump-powerpc.h  fixup_dtb.c  fixup_dtb.h  fs2dt.c  kexec-dol-ppc.c  kexec-elf-ppc.c  kexec-elf-rel-ppc.c  kexec-ppc.c  kexec-ppc.h  kexec-uImage-ppc.c  libfdt-wrapper.c  ops.h  ppc-setup-dol.S  ppc-setup-simple.S  ppc_asm.h
kexec-tools/kexec/arch/ppc/include/: page.h
kexec-tools/kexec/arch/ppc64/: Makefile  crashdump-ppc64.c  crashdump-ppc64.h  fdt.c  kexec-elf-ppc64.c  kexec-elf-rel-ppc64.c  kexec-ppc64.c  kexec-ppc64.h  kexec-zImage-ppc64.c
kexec-tools/kexec/arch/s390/: Makefile  crashdump-s390.c  kexec-elf-rel-s390.c  kexec-image.c  kexec-s390.c  kexec-s390.h
kexec-tools/kexec/arch/sh/: Makefile  crashdump-sh.c  crashdump-sh.h  kexec-elf-rel-sh.c  kexec-elf-sh.c  kexec-netbsd-sh.c  kexec-sh.c  kexec-sh.h  kexec-uImage-sh.c  kexec-zImage-sh.c  netbsd_booter.S
kexec-tools/kexec/arch/x86_64/: Makefile  kexec-bzImage64.c  kexec-elf-rel-x86_64.c  kexec-elf-x86_64.c  kexec-x86_64.c  kexec-x86_64.h
kexec-tools/kexec/libfdt/: Makefile.libfdt  libfdt.h  libfdt_internal.h
kexec-tools/kexec_test/: Makefile  kexec_test.S  kexec_test16.S  x86-setup-legacy-pic.S
kexec-tools/purgatory/: Makefile  printf.c  purgatory.c  string.c
kexec-tools/purgatory/arch/alpha/: Makefile
kexec-tools/purgatory/arch/arm/: Makefile
kexec-tools/purgatory/arch/arm64/: Makefile  entry.S  purgatory-arm64.c
kexec-tools/purgatory/arch/i386/: Makefile  compat_x86_64.S  console-x86.c  crashdump_backup.c  entry32-16-debug.S  entry32-16.S  entry32.S  pic.c  purgatory-x86.c  purgatory-x86.h  setup-x86.S  stack.S  vga.c
kexec-tools/purgatory/arch/ia64/: Makefile  console-ia64.c  entry.S  io.h  purgatory-ia64.c  purgatory-ia64.h  vga.c
kexec-tools/purgatory/arch/loongarch/: Makefile  purgatory-loongarch.c  purgatory-loongarch.h
kexec-tools/purgatory/arch/mips/: Makefile  console-mips.c  purgatory-mips.c  purgatory-mips.h
kexec-tools/purgatory/arch/ppc/: Makefile  misc.S  purgatory-ppc.c  purgatory-ppc.h  v2wrap_32.S
kexec-tools/purgatory/arch/ppc64/: Makefile  console-ppc64.c  crashdump_backup.c  hvCall.S  hvCall.h  ppc64_asm.h  purgatory-ppc64.c  purgatory-ppc64.h  v2wrap.S
kexec-tools/purgatory/arch/s390/: Makefile  console-s390.c  purgatory-s390.c  setup-s390.S
kexec-tools/purgatory/arch/sh/: Makefile
kexec-tools/purgatory/arch/x86_64/: Makefile  entry64-32.S  purgatory-x86_64.c  purgatory-x86_64.h  setup-x86_64.S  stack.S
kexec-tools/purgatory/include/: purgatory.h  string.h
kexec-tools/util/: Makefile  bin-to-hex.c
kexec-tools/util_lib/: Makefile  compute_ip_checksum.c  elf_info.c  sha256.c
kexec-tools/util_lib/include/: elf_info.h  ip_checksum.h  sha256.h
kexec-tools/vmcore-dmesg/: Makefile  vmcore-dmesg.8  vmcore-dmesg.c
(+508 files in other folders)
